Added boilerplate HTML it index.html, added README.md, Added DS_Store to gitignore.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Nashville Software School</title>
-        <link rel="stylesheet" href="./styles/main.css">
-    </head>
 
-    <body>
-        <main id="container">
+<head>
+    <meta charset="utf-8">
+    <title>Patrick's Daily Journal</title>
+    <link rel="stylesheet" href="./styles/main.css">
+</head>
 
-        </main>
+<body>
+    <header>
+        <h1>Patrick Do Words Good</h1>
+    </header>
 
-        <script type="module" src="./scripts/main.js"></script>
-    </body>
+    <main id="container">
+        <article class="container__left">
+            <section class="concepts">Today's Concepts
+                <form action=""></form>
+            </section>
+
+            <section class="journal__entry">
+                <form action=""></form>
+            </section>
+
+            <div class="entry__button">
+                <form action=""></form>
+            </div>
+
+            <div class="mood__dropdown">
+                <form action=""></form>
+            </div>
+
+            <div class="edit__button">
+                <form action=""></form>
+            </div>
+
+            <div class="delete__butoon">
+                <form action=""></form>
+            </div>
+        </article>
+
+        <article class="container__right">
+            <section class="calendar">
+                <form action=""></form>
+            </section>
+
+            <section class="entry__list">
+                <form action=""></form>
+            </section>
+        </article>
+    </main>
+
+    <footer>Patrick Stewart |
+        <link rel="github" href="https://github.com/NotThatPatrickStewart"> | copyright 2020</footer>
+
+    <script type="module" src="./scripts/main.js"></script>
+</body>
+
 </html>
