I refactored my journal to remove everything hardwired into the index.html , creating a journal form file and refactoring the rest of my journal files so that these forms actually function, and the save button will actually save these forms to the dom.

--- a/index.html
+++ b/index.html
@@ -12,61 +12,8 @@
         <h1>Patrick Do Words Good</h1>
     </header>
 
-    <main id="container">
+    <main class="container">
         <article class="container__left">
-
-            <form class="to__submit" action="">
-                <h2>
-                    <label for="journalDate">What day is it?</label>
-                </h2>
-                <fieldset class="calendar">
-                    <input type="date" name="journalDate" id="journalDate">
-                </fieldset>
-            
-                <h2>
-                    <label for="journalConcepts">Today's Concepts</label>
-                </h2>
-                <textarea name="journalConcepts" id="" cols="50" rows="3"></textarea>
-            </section>
-
-            <section class="journal__entry">
-                    <h2>
-                        <label for="journalEntry">Today's Entry</label>
-                    </h2>
-                    <textarea name="journalEntry" id="" cols="100" rows="20"></textarea>
-            </section>
-
-            <div class="mood__dropdown">
-                    <h2>
-                        <label for="moodDropdown">Today's Mood</label>
-                    </h2>
-                    <select name="moodDropdown" id="moodDropdown">
-                        <option value="pickOne">Please Select a Mood</option>
-                        <option value="stressed">Stressed</option>
-                        <option value="anxious">Anxious</option>
-                        <option value="overwhelmed">Overwhelmed</option>
-                        <option value="freakingOut">Freaking Out</option>
-                        <option value="notBad">Actually Not That Bad!</option>
-                    </select>
-            </div>
-
-            <div class="entry__button">
-                <form class="submit" action="">
-                    <button type="submit" form="to__submit" value="submit">Yeet</button>
-            </div>
-
-            <div class="edit__button">
-            </div>
-
-            <div class="delete__butoon">
-            </div>
-        </article>
-
-        <article class="container__right">
-
-            <section class="entry__list">
-            </section>
-        </form>
         </article>
     </main>
 
